# TTS_playground

./: .gitignore  README.md  environment.yml  pyproject.toml
models/F5-TTS/: environment.yml  pyproject.toml
models/F5-TTS/config/: base.yaml  basic.yaml
models/F5-TTS/src/: infer_all.py  main.py
models/F5-TTS/src/utils/: config.py  config_loader.py  inference.py  loader.py
models/OuteTTS/: environment.yml  pyproject.toml
models/OuteTTS/src/: main.py
notebooks/: mars5.ipynb
shared_utils/: audio_app_selection.py  download_audio.py  download_video.py  extract_wav_segment.py  utils_audio.py
src/: main.py
