[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tts_playground"
version = "0.0.1"
description = ""
authors = ["Nicolas PREVOT <nicolasprevot57@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytubefix = "^8.8.2"
loguru = "^0.7.3"
plotly = "^5.24.1"
numpy = "^2.2.0"
dash = "^2.18.2"
