[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tts_playground_F5-TTS"
version = "0.0.1"
description = ""
authors = ["Nicolas PREVOT <nicolasprevot57@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<2"
torch = {version = "2.3.1+cu121", source = "pytorch"}
torchaudio = {version = "2.3.1+cu121", source = "pytorch"}
f5-tts = {git = "https://github.com/SWivid/F5-TTS.git"}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"