[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tts_playground_OuteTTS"
version = "0.0.1"
description = ""
authors = ["Nicolas PREVOT <nicolasprevot57@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.3.1+cu121", source = "pytorch"}
torchaudio = {version = "2.3.1+cu121", source = "pytorch"}
outetts = {version = "^0.2.3", optional = true}

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"